--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("../img/Inicio.png");
+    ,url("./img/Inicio.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
